v4.2.0/_sources/generated/pcdsdevices.device_types.LODCM.rst.txt
pcdsdevices.device\_types.LODCM
===============================

.. currentmodule:: pcdsdevices.device_types

.. autoclass:: LODCM

   
   
    .. list-table:: Ophyd Device Components
       :header-rows: 1
       :widths: auto

       *  - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
   
       *  -  yag
          -  :class:`~pcdsdevices.lodcm.YagLom`
          -  ``:DV``
          -  
          -  omitted
          -  
   
       *  -  dectris
          -  :class:`~pcdsdevices.lodcm.Dectris`
          -  ``:DH``
          -  
          -  omitted
          -  
   
       *  -  diode
          -  :class:`~pcdsdevices.lodcm.Diode`
          -  ``:DIODE``
          -  
          -  omitted
          -  
   
       *  -  foil
          -  :class:`~pcdsdevices.lodcm.Foil`
          -  ``:FOIL``
          -  
          -  omitted
          -  
   
       *  -  tower1 (FCpt)
          -  :class:`~pcdsdevices.lodcm.CrystalTower1`
          -  ``{self._prefix}``
          -  
          -  normal
          -  
   
       *  -  tower2 (FCpt)
          -  :class:`~pcdsdevices.lodcm.CrystalTower2`
          -  ``{self._prefix}``
          -  
          -  normal
          -  
   
       *  -  diag_tower (FCpt)
          -  :class:`~pcdsdevices.lodcm.DiagnosticsTower`
          -  ``{self._prefix}``
          -  
          -  normal
          -  
   
       *  -  energy_si (FCpt)
          -  :class:`~pcdsdevices.lodcm.LODCMEnergySi`
          -  ``{self._prefix}``
          -  
          -  normal
          -  
   
       *  -  energy_c (FCpt)
          -  :class:`~pcdsdevices.lodcm.LODCMEnergyC`
          -  ``{self._prefix}``
          -  
          -  normal
          -  
   

   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   

   
   


    
    
    .. rubric:: Methods

    .. autosummary::
       :toctree: generated
    
       ~LODCM.calc_energy
       ~LODCM.configure
       ~LODCM.describe
       ~LODCM.get
       ~LODCM.get_energy
       ~LODCM.get_material
       ~LODCM.get_reflection
       ~LODCM.read
       ~LODCM.read_configuration
       ~LODCM.remove
       ~LODCM.remove_dia
       ~LODCM.stop
       ~LODCM.summary
       ~LODCM.trigger
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::
    
       ~LODCM.branches
       ~LODCM.configuration_attrs
       ~LODCM.connected
       ~LODCM.destination
       ~LODCM.energy
       ~LODCM.hints
       ~LODCM.kind
       ~LODCM.transmission
    
    